--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 REDIRECT_URI=
-SCOPE=
-RESPONSE_TYPE=
+SCOPE=identify%20email%20connections%20guilds
+RESPONSE_TYPE=token
 CLIENT_ID=
-CDN_IMAGE=
+CDN_IMAGE=https://cdn.discordapp.com/
